[package]
name = "bevy_playground"
version = "0.1.0"
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
  "bevy/dynamic",
]

[dependencies]
bevy = { version =  "0.9.1", default-features = false, features = [
  "animation",
  "bevy_asset",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  "x11",
  "filesystem_watcher"] }
bevy_kira_audio = { version = "0.14" }
bevy_ggrs = { version = "0.11", features = ["wasm-bindgen"] }
matchbox_socket = { version = "0.5", features = ["ggrs-socket"] }
benimator = { version = "4.1.2" }
bevy_asset_loader = { version = "0.14", features = ["2d"] }
bevy_egui = { version = "0.19.0" }
bevy-inspector-egui = { version = "0.17.0" }