[package]
name = "bevy_playground"
version = "0.1.0"
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
  "bevy/dynamic_linking",
]

[target."cfg(target_arch = \"wasm32\")".dependencies]
bevy_ggrs = { version = "0.12", features = ["wasm-bindgen"] }

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
bevy_ggrs = { version = "0.12" }

[dependencies]
bevy = { version =  "0.10.1", default-features = false, features = [
  "animation",
  "bevy_asset",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "png",
  "hdr",
  "ktx2",
  "zstd",
  "x11",
  "filesystem_watcher",
  "tonemapping_luts",
  ] }
bevy_kira_audio = { version = "0.15.0" }
matchbox_socket = { version = "0.5.0", features = ["ggrs-socket"] }
benimator = { version = "4.1.2" }
bevy_asset_loader = { version = "0.15.0", features = ["2d"] }
bevy_egui = { version = "0.20.2" }
bevy-inspector-egui = { version = "0.18.1" }
fastrand = { version = "1.9.0" }