[package]
name = "bevy_playground"
version = "0.1.0"
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bevy_playground"
crate-type = ["staticlib", "cdylib"]

[package.metadata.android]
package = "org.bevyengine.example"
apk_name = "bevyexample"
assets = "./assets"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

# [package.metadata.android.signing.release]
# path = "./.android/debug.keystore"
# keystore_password = "android"

[package.metadata.android.sdk]
min_sdk_version = 27
target_sdk_version = 31

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
  "bevy/dynamic_linking",
]

[target."cfg(target_arch = \"wasm32\")".dependencies]
bevy_ggrs = { version = "0.12", features = ["wasm-bindgen"] }

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
bevy_ggrs = { version = "0.12" }

[target.'cfg(target_os = "android")'.dependencies]
oboe = { version = "0.5", features = ["shared-stdcxx"] }

[dependencies]
bevy = { version =  "0.10.1", default-features = false, features = [
  "animation",
  "bevy_asset",
  # "bevy_audio",
  # "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  # "bevy_gltf",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "png",
  "hdr",
  "ktx2",
  "zstd",
  # "vorbis",
  "x11",
  "filesystem_watcher",
  # "android_shared_stdcxx",
  "tonemapping_luts",
  ] }
bevy_kira_audio = { version = "0.15.0" }
bevy_matchbox = { version = "0.6.0", features = ["ggrs"]   }
benimator = { version = "4.1.2" }
bevy_asset_loader = { version = "0.16.0", features = ["2d"] }
# bevy_egui = { version = "0.20.2" }
# bevy-inspector-egui = { version = "0.18.1" }
fastrand = { version = "1.9.0" }